Thu Feb 24 18:14:23 2005  Olli Savia  <ops@iki.fi>

        * tests/RTCORBA/RTMutex/server.cpp:
          Removed LynxOS specific code which is no longer needed.

Thu Feb 24 15:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Fixed_Array_SArgument_T.h:
        * tao/PortableServer/Var_Array_SArgument_T.h:
          Removed trailing semi-colon after namespace closure

Thu Feb 24 07:13:00 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/PSS/Makefile.am:

          Removed.

        * orbsvcs/Makefile.am:
        * configure.ac:

          Remove PSS from list of subdirs.

Thu Feb 24 06:57:46 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/OBV/Supports/Supports_Test.mpc:

          Change "dummy_lable" to "dummy_label".

        * orbsvcs/PSS/PSDL.mpc:

          Change "dummy" to "dummy_label".

Thu Feb 24 08:10:35 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_interface (gen_skel_helper):

          Cleaned up generated code for calls to base class *_skel()
          methods, by changing C-style casts to static_cast<> and
          by eliminating redundant casts. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for reporting the problem.

Thu Feb 24 12:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Removed not needed cast

Thu Feb 24 10:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Collocation/Collocation.mpc:
        * tests/LongUpcalls/LongUpcalls.mpc:
        * tests/InterOp-Naming/InterOp-Naming.mpc:
          Added exename

Thu Feb 24 10:13:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/ServantRetentionStrategyRetain.cpp:
          Fixed warnings in the Tru64 build

Thu Feb 24 09:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/*S.{h,cpp,inl}:
        * orbsvcs/orbsvcs/IFRService/*S_T.{h,cpp,inl}: